my-apps/proxitok/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxitok-route
  namespace: proxitok
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-external
      namespace: gateway
      sectionName: https
  hostnames:
    - "proxitok.mvt.com.ar"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: proxitok-web
          port: 8080
          weight: 1
